--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,23 +1,10 @@
 @define-color bg-hover #f28668;
-@define-color lbg #131721;
 @define-color bg #0b0e14;
-@define-color blue #73b8ff;
-@define-color sky #95e6cb;
 @define-color red #f07178;
-@define-color pink #f28779;
 @define-color lavender #d2a6ff;
-@define-color rosewater #f07178;
-@define-color flamingo #f07178;
 @define-color fg #bfbdb6;
-@define-color green #7fd962;
-@define-color active-green #aad94c;
-@define-color dark-fg #787bb0;
 @define-color peach #f2966b;
 @define-color border @lavender;
-@define-color gray2 #cccac2;
-@define-color black4 #0d1017;
-@define-color black3 #131721;
-@define-color maroon #d95757;
 @define-color yellow #FF8F40;
 
 * {
@@ -89,6 +76,7 @@ window#waybar {
 
 #workspaces button.urgent {
 	color: #F38BA8;
+  background-color: @bg-hover;
 }
 
 #workspaces button:hover {
@@ -138,15 +126,6 @@ window#waybar {
 #network.disconnected,
 #network.disabled {
   color: @red;
-}
-
-#custom-subs {
-	color: @bg;
-	margin: 5px 5px 2px 5px;
-  padding-left: 10px;
-  padding-right: 12px;
-  border-radius: 7px;
-  background-color: @rosewater;
 }
 
 #custom-cliphist {
